--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Street Mode - Tout à 10€</title>
   <style>
     body { margin: 0; font-family: sans-serif; background: white; color: black; }
@@ -33,8 +33,8 @@
   </header>
   <div class="gallery">
     <div class="item" data-category="robes">
-      <img src="images/photo1.png" alt="Article 1">
-      <div class="caption">Robe noire ceinturée</div>
+      <img src="images/photo1.jpg" alt="Robe verte">
+      <div class="caption">Robe verte imprimée</div>
     </div>
   </div>
   <a class="whatsapp" href="https://wa.me/33623501568" target="_blank">WhatsApp</a>
